fixed align

--- a/css/paths_css.css
+++ b/css/paths_css.css
@@ -25,7 +25,7 @@ header{
 }
 #balance{
   margin-right: 7px;
-  height: 50px;
+  height: 54px;
   vertical-align: middle;
 }
 #avatar{
